tests/ui/pattern/rfc-3627-match-ergonomics-2024/experimental/pattern-errors.structural2024.stderr
error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:26:17
   |
LL |     if let Some(&mut Some(&_)) = &Some(&Some(0)) {
   |                 ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     if let Some(&Some(&_)) = &Some(&Some(0)) {
   |                 ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:30:23
   |
LL |     if let Some(&Some(&mut _)) = &Some(&mut Some(0)) {
   |                       ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     if let Some(&Some(&_)) = &Some(&mut Some(0)) {
   |                       ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:34:23
   |
LL |     if let Some(&Some(&mut _)) = &mut Some(&Some(0)) {
   |                       ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     if let Some(&Some(&_)) = &mut Some(&Some(0)) {
   |                       ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:38:28
   |
LL |     if let Some(&Some(Some(&mut _))) = &Some(Some(&mut Some(0))) {
   |                            ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     if let Some(&Some(Some(&_))) = &Some(Some(&mut Some(0))) {
   |                            ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:42:17
   |
LL |     if let Some(&mut Some(x)) = &Some(Some(0)) {
   |                 ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     if let Some(&Some(x)) = &Some(Some(0)) {
   |                 ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:49:11
   |
LL |     let &[&mut x] = &&mut [0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let &[&x] = &&mut [0];
   |           ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:54:11
   |
LL |     let &[&mut x] = &mut &mut [0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let &[&x] = &mut &mut [0];
   |           ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:59:11
   |
LL |     let &[&mut ref x] = &&mut [0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let &[&ref x] = &&mut [0];
   |           ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:64:11
   |
LL |     let &[&mut ref x] = &mut &mut [0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let &[&ref x] = &mut &mut [0];
   |           ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:69:11
   |
LL |     let &[&mut mut x] = &&mut [0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let &[&mut x] = &&mut [0];
   |           ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:74:11
   |
LL |     let &[&mut mut x] = &mut &mut [0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let &[&mut x] = &mut &mut [0];
   |           ~

error[E0658]: binding cannot be both mutable and by-reference
  --> $DIR/pattern-errors.rs:81:12
   |
LL |     let [&(mut x)] = &[&0];
   |            ^^^^
   |
   = note: see issue #123076 <https://github.com/rust-lang/rust/issues/123076> for more information
   = help: add `#![feature(mut_ref)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: binding cannot be both mutable and by-reference
  --> $DIR/pattern-errors.rs:85:12
   |
LL |     let [&(mut x)] = &mut [&0];
   |            ^^^^
   |
   = note: see issue #123076 <https://github.com/rust-lang/rust/issues/123076> for more information
   = help: add `#![feature(mut_ref)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:91:11
   |
LL |     let [&&mut x] = &[&mut 0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let [&&x] = &[&mut 0];
   |           ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:96:11
   |
LL |     let [&&mut x] = &mut [&mut 0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let [&&x] = &mut [&mut 0];
   |           ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:101:11
   |
LL |     let [&&mut ref x] = &[&mut 0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let [&&ref x] = &[&mut 0];
   |           ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:106:11
   |
LL |     let [&&mut ref x] = &mut [&mut 0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let [&&ref x] = &mut [&mut 0];
   |           ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:111:11
   |
LL |     let [&&mut mut x] = &[&mut 0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let [&&mut x] = &[&mut 0];
   |           ~

error[E0308]: mismatched types
  --> $DIR/pattern-errors.rs:116:11
   |
LL |     let [&&mut mut x] = &mut [&mut 0];
   |           ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL |     let [&&mut x] = &mut [&mut 0];
   |           ~

error: aborting due to 19 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
